Fix footer on small devices

--- a/_themes/bootstrap/static/styles.css
+++ b/_themes/bootstrap/static/styles.css
@@ -81,6 +81,7 @@ table.field-list {
   text-shadow: 0 1px 0 #fff;
   background-color: #f5f5f5;
   border-radius: 5px;
+  margin-bottom: 20px;
 }
 
 .bs-sidenav h4 {
@@ -322,26 +323,30 @@ div.admonition p.last {
   text-shadow: none;
 }
 
-html {
-    position: relative;
-    min-height: 100%;
-}
-
-body {
-    margin-bottom: 220px;
-}
-
 footer {
     background-color: #eee;
     color: #747474;
     margin-top: 20px;
-    padding: 20px 0 10px;
+    padding: 20px 0;
+    width: 100%;    
+}
 
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    
-    height: 185px;
+@media (min-width:767px) {
+    html {
+        position: relative;
+        min-height: 100%;
+    }
+
+    body {
+        margin-bottom: 220px;
+    }
+
+    footer {
+        height: 185px;
+        padding-bottom: 10px;
+        position: absolute;
+        bottom: 0;
+    }
 }
 
 .navbar-hangfire {
